# cc_tools

./: .appveyor.yml  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/cc_view/: CMakeLists.txt  main.cpp  resources.qrc
app/cc_view/qml/: CC_AvailablePluginsLists.qml  CC_BackgroundRectangle.qml  CC_ExchangedMessages.qml  CC_ExchangedMessagesToolbar.qml  CC_MessageInfo.qml  CC_MessagesToSend.qml  CC_PluginListView.qml  CC_PluginSelectDialog.qml  CC_PluginsConfigLoadDialog.qml  CC_PluginsConfigLoadFailedDialog.qml  CC_PluginsConfigSaveDialog.qml  CC_PluginsConfigSaveFailedDialog.qml  CC_PluginsConfigToolbar.qml  CC_PluginsListGroupBox.qml  CC_PluginsListView.qml  CC_PluginsListWithConfig.qml  CC_PluginsReloadConfirmDialog.qml  CC_PluginsReloadErrorDialog.qml  CC_PluginsSelectDialog.qml  CC_ToolButton.qml  CC_Toolbar.qml  CC_ToolbarBackground.qml  CC_Tooltip.qml  main.qml
app/cc_view/src/: AppMgr.cpp  AppMgr.h  GuiState.cpp  GuiState.h  PluginListModel.cpp  PluginListModel.h  common_defs.h  main.cpp
cmake/: CC_DeployQt5Script.cmake  CommonFuncs.cmake
lib/: CMakeLists.txt
lib/cc_app/: CMakeLists.txt
lib/cc_app/include/cc_tools/cc_app/: Api.h  ConfigMgr.h  PluginMgr.h
lib/cc_app/src/: ConfigMgr.cpp  PluginMgr.cpp  PluginMgrImpl.cpp  PluginMgrImpl.h
lib/cc_plugin/: CMakeLists.txt
lib/cc_plugin/include/cc_tools/cc_plugin/: Api.h  DataInfo.h  Plugin.h  PluginIntegration.h  PluginObject.h  Protocol.h  Socket.h
lib/cc_plugin/src/: DataInfo.cpp  Plugin.cpp  PluginIntegration.cpp  PluginIntegrationImpl.cpp  PluginIntegrationImpl.h  PluginObject.cpp  Protocol.cpp  Socket.cpp
plugin/: CMakeLists.txt
plugin/protocol/demo/: CMakeLists.txt  DemoProtocol.cpp  DemoProtocol.h  DemoProtocolPlugin.cpp  DemoProtocolPlugin.h  demo_protocol.json
plugin/socket/: CMakeLists.txt
plugin/socket/echo/: CMakeLists.txt  EchoSocket.cpp  EchoSocket.h  EchoSocketPlugin.cpp  EchoSocketPlugin.h
plugin/socket/tcp_client/: CMakeLists.txt  TcpClientSocket.cpp  TcpClientSocket.h  TcpClientSocketIntegrationObj.cpp  TcpClientSocketIntegrationObj.h  TcpClientSocketPlugin.cpp  TcpClientSocketPlugin.h  resources.qrc
plugin/socket/tcp_client/tcp_client_socket/qml/: CC_TcpClientSocketConfig.qml  CC_TcpClientSocketConfigDialog.qml  CC_TcpClientSocketDisconnectedDialog.qml  CC_TcpClientSocketFailedToConnectDialog.qml  CC_TcpClientSocketToolbar.qml
